# hyperkernel

./: .appveyor.yml  .doxygen.txt  .gitignore  .travis.yml  CMakeLists.txt
InnoSetup/: Bareflank.iss  bareflank.cat  bareflank.inf  bareflank.sys  builder.cat  builder.inf  builder.sys  visr.cat  visr.inf  visr.sys
bfdriver/builder/include/: common.h
bfdriver/builder/src/: common.c
bfdriver/builder/src/platform/linux/: Makefile  entry.c  intrinsics.S  platform.c
bfdriver/builder/src/platform/windows/: builder.filters  builder.inf  builder.sln  builder.vcxproj  device.c  device.h  driver.c  driver.h  intrinsics.asm  platform.c  queue.c  queue.h
bfdriver/src/platform/linux/: .entry.o.cmd  .event.o.cmd  .hkd.ko.cmd  .hkd.mod.o.cmd  .hkd.o.cmd  entry.c  hkd.ko  hkd.mod.c  modules.order
bfdriver/src/platform/linux/.tmp_versions/: hkd.mod
bfdriver/src/platform/windows/: device.c  uninstall.cmd  visr.inf
bfdriver/visr/src/platform/windows/: device.h  driver.c  driver.h  install.cmd  visr.sln  visr.vcxproj  visr.vcxproj.filters
bfexec/: CMakeLists.txt
bfexec/include/: args.h  cmdl.h  file.h  ioctl.h  verbose.h
bfexec/include/xen/: elf_note.h
bfexec/src/: CMakeLists.txt  main.c  main.cpp  platform.c
bfexec/src/linux/: platform.c
bfexec/src/platform/linux/: ioctl.cpp  ioctl_private.cpp  ioctl_private.h
bfexec/src/platform/windows/: ioctl.cpp  ioctl_private.cpp  ioctl_private.h
bfexec/src/windows/: platform.c
bfexec/src/xen/: elf_note.h  start_info.h
bfsdk/include/: bfbuilderinterface.h  bfdriverinterface.h  bfgpalayout.h  bfhypercall.h  bfmath.h
bfsdk/include/xen/public/: xen.h
bfvmm/include/domain/: domain.h  domain_factory.h  domain_manager.h
bfvmm/include/hve/arch/intel_x64/: acpi.h  base.h  domain.h  event.h  fault.h  ioapic.h  lapic.h  uart.h  vcpu.h
bfvmm/include/hve/arch/intel_x64/vmcall/: bf86_op.h  domain_op.h  evtchn_op.h  run_op.h  vcpu_op.h
bfvmm/include/hve/arch/intel_x64/vmexit/: fault.h  (+2 more)
bfvmm/src/: CMakeLists.txt
bfvmm/src/domain/: CMakeLists.txt  domain.cpp
bfvmm/src/hve/: CMakeLists.txt
bfvmm/src/hve/arch/intel_x64/: domain.cpp  event.cpp  ioapic.cpp  lapic.cpp  uart.cpp  vcpu.cpp
bfvmm/src/main/: CMakeLists.txt
bfvmm/src/main/arch/intel_x64/: domain_factory.cpp  vcpu_factory.cpp
erb/: CMakeLists.txt  README
erb/image/: null-override.mk
erb/image/demo-gigabyte/: buildroot.config.in  linux.config.in
erb/image/demo-gigabyte/overlay/: hello
erb/image/ndvm-r8169/: linux.config.in
erb/image/tiny/: buildroot.config.in
erb/image/tiny/overlay/: hello.c
erb/image/xenstore/: linux.config.in  override.mk.in
include/: builderinterface.h  gpa_layout.h  hypercall.h  visrinterface.h
include/domain/: domain_intel_x64.h
scripts/cmake/: targets.cmake
scripts/cmake/config/: default.cmake  reconfig.cmake
scripts/cmake/depends/: buildroot.cmake  xtools.cmake
scripts/util/: driver_build.sh  driver_clean.sh  driver_load.sh  driver_unload.sh  menuconfig.sh  setup-erb-arch.sh  setup-erb-ubuntu1804.sh  setup-erb-wsl.sh
src/domain/src/: domain_intel_x64.cpp
src/exit_handler/src/: exit_handler_intel_x64_hyperkernel.cpp
src/process/src/: process_intel_x64.cpp
src/vmcs/src/: vmcs_intel_x64_guest_vm_state.cpp  vmcs_intel_x64_hyperkernel.cpp
tests/: CMakeLists.txt  clang_x86_64_tests_nopie.cmake  clang_x86_64_tests_pie.cmake  start.s  test_hyperkernel_basic.c
tests/basic_c/src/: Makefile.bf  cr3.asm  main.c
(+28 files in other folders)
